--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
     padding: 0px;    
     opacity: 1;
     position: relative;
-    background-image: url(/bg2.jpg);
+    background-image: url(/temp-bg.jpg);
     background-repeat: no-repeat;
     /* background-size: 1545px 740px; */
     background-position:center;
