--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,11 @@ body {
     padding: 0px;    
     opacity: 1;
     position: relative;
-    /* background-image: url(https://www.freepik.com/free-photo/red-yellow-watercolor_18379785.htm#page=1&query=background&position=1&from_view=keyword);
+    background-image: url(/bg2.jpg);
     background-repeat: no-repeat;
     background-size: 1545px 740px;
     background-position:center;
-    background-size: cover; */
+    background-size: cover;
 
 }
 
